# course-DEV-IDE-with-AGENTS

./: .coverage  .env - Copy.example  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  SESSION-HANDOFF.md  bmad-session-protocol-session-MISC.md  bmad-session-protocol-session-START.md  bmad-session-protocol-session-WRAPUP.md  bmad-session-protocol.md  next-session-start-here.md  pyproject.toml  requirements.txt
.cursor-plugin/: plugin.json
.cursor/rules/: bmad-sprint-governance.mdc  course-content-agents.mdc
.github/: copilot-instructions.md
.github/workflows/: anti-drift-monitor.yml  pdg-flake-gate.yml
_bmad/: config.yaml
_bmad-output/: strategic-decisions-collaborative-intelligence.md
_bmad-output/brainstorming/: brainstorming-session-20260325-150802.md  party-mode-coaching-content-creator-quality-reviewer.md  party-mode-coaching-gamma-specialist.md  party-mode-coaching-kling-specialist.md  party-mode-coaching-marcus-orchestrator.md  party-mode-composition-architecture.md  party-mode-elevenlabs-capability-audit.md  (+2 more)
_bmad/bmb/: config.yaml
agents/: README.md  articulate-specialist.md  canva-specialist.md  canvas-specialist.md  coursearc-specialist.md  midjourney-specialist.md  qualtrics-specialist.md  vyond-specialist.md
commands/: README.md
config/: content-standards.yaml  platforms.example.yaml  raw-http-allowlist.txt
docs/: ad-hoc-contract.md  admin-guide.md  agent-environment.md  app-design-principles.md  app-logging-channels.md  app-logging-evaluation.md  dev-guide.md  directory-responsibilities.md  epic-4-4a-implementation-adversarial-review-and-remediation.md  fidelity-gate-map.md  fidelity-walk.md  governance-dimensions-taxonomy.md  lane-matrix.md  operations-context.md  parameter-directory.md  project-context.md  research-knobs-guide.md  source-ref-grammar.md  structural-walk.md  token-efficiency-review-and-remediation.md  trial-run-prompts-to-irene-pass2-v2.md  trial-run-prompts-to-irene-pass2-v3.md  user-guide.md
hooks/: hooks.json
integrations/: Tools CSV TBL11981710363.csv
maintenance/: IDE chat session run prompt 2026-04-17.txt  audit_done_bmad_coverage.py  cowork-project-instructions.md  cowork-project-seed.md  cowork-project-setup-guide.md  cross-harmonization-report-2026-04-15-pass2.md  cross-harmonization-report-2026-04-15.md  cross-harmonization-report-2026-04-16.md  doc review prompt 2026-04-12.txt  efficiency prompts 2026-04-18.txt  progress-map-job-aid.md
marcus/: __init__.py  facade.py
rules/: README.md
run-records/: README.md  run-record-2026-04-15T20-44-58.md  run-record-2026-04-15T20-56-55.md
scripts/: __init__.py  fidelity_drift_check.py  heartbeat_check.mjs  resolve_source_ref.py  run_mcp_from_env.cjs  run_story33_kling_queue.py  smoke_elevenlabs.mjs  smoke_qualtrics.mjs  validate_fidelity_contracts.py
skills/: README.md
tests/: Happy Path Simulation Display Screens 2026-04-02.txt  Happy Path Simulation Display Screens 2026-04-03-harmonization.md  Happy Path Simulation Display Screens 2026-04-03.md  conftest.py  epic-5-6-stories-adversarial-review-5.1-5.4-6.1.md  fidelity-walk-20260403-110000.md  fidelity-walk-20260403-111500.md  fidelity-walk-20260403-153321.md  fidelity-walk-20260403-201006.md  happy-path-simulation-motion-double-dispatch-20260405.md  simulated-run-happy-path-20260402-224500.md  test_33_3_dc1_resolution.py  test_33_3_dc2_resolution.py  test_33_3_dc3_resolution.py  test_actor_fields_maya_serialization_safe.py  test_ad_hoc_persistence_guard.py  test_app_session_readiness.py  test_archive_agent_quality_scan.py  test_blueprint_coauthor.py  test_blueprint_producer.py  test_botpress_client.py  test_box_provider.py  test_canva_specialist_contract.py  test_canvas_snapshot_helper.py  test_check_learning_event_lockstep.py  test_check_pipeline_manifest_lockstep.py  test_cluster_aware_pass2_contract_docs.py  test_coursearc_specialist_contract.py  test_coverage_manifest_assert_plan_fresh_detection.py  test_coverage_manifest_plan_ref_verifier.py  test_coverage_manifest_regenerates_on_current_state.py  test_coverage_manifest_summary.py  test_creative_directive_schema.py  test_creative_directive_validator.py  test_datetime_utc_enforcement.py  test_dials_boundary_values.py  test_digest_determinism.py  test_discovery_podcasts_audio_content.py  test_elevenlabs_client.py  test_emit_ingestion_quality_receipt.py  (+119 more)
(+1431 files in other folders)
