[project]
name = "course-dev-ide-with-agents"
version = "0.1.0"
description = "Collaborative intelligence infrastructure for course content production"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Juanl" }]
keywords = ["edtech", "course-production", "multi-agent", "content-creation"]

dependencies = [
    "requests>=2.31,<3",
    "python-dotenv>=1.0,<2",
    "pydantic>=2.7,<3",
    "aiohttp>=3.9,<4",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4,<1",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
